api added for a stock management
