# src/models/stocks/stocks.model.ts
@@ -1,13 +1,15 @@
 import mongoose, { Document, Schema } from "mongoose";
-import { Status, Unit } from "../../types/type";
+import { ProductStatus, Status, Unit } from "../../types/type";
 
 // Define the recipe interface
 export interface IStocks extends Document {
   name: string;
   ingredientId: mongoose.Types.ObjectId;
-  inStockCount: Number;
+  inStockCount: number;
+  availabilityStatus: ProductStatus;
   status: Status;
-  unitPrice: Number;
+  unitPrice: number;
+  unitType: Unit;
   expireDate: Date;
   lastUpdatedBy: mongoose.Types.ObjectId;
 }
@@ -16,12 +18,35 @@ export interface IStocks extends Document {
 const StockSchema = new Schema<IStocks>(
   {
     name: { type: String, required: true },
-    ingredientId: { type: Schema.Types.ObjectId, required: true },
-    status: { type: String, enum: Object.values(Status), required: true },
+    ingredientId: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: "Ingredients",
+    },
+    status: {
+      type: String,
+      enum: Object.values(Status),
+      default: Status.ACTIVE,
+      required: true,
+    },
+    unitType: { 
+      type: String, 
+      enum: Object.values(Unit), 
+      required: true,
+    },
     inStockCount: { type: Number, required: true },
+    availabilityStatus: {
+      type: String,
+      enum: Object.values(ProductStatus),
+      required: true,
+    },
     unitPrice: { type: Number, required: true },
     expireDate: { type: Date, required: true },
-    lastUpdatedBy: { type: Schema.Types.ObjectId, required: true, ref: "Users" },
+    lastUpdatedBy: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: "Users",
+    },
   },
   {
     timestamps: { createdAt: "createdAt", updatedAt: "lastUpdatedAt" },
